src/test/ui/const-generics/issue-67375.min.stderr
error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/issue-67375.rs:9:25
   |
LL |     inner: [(); { [|_: &T| {}; 0].len() }],
   |                         ^ non-trivial anonymous constants must not depend on the parameter `T`
   |
   = note: type parameters are currently not permitted in anonymous constants

error[E0392]: parameter `T` is never used
  --> $DIR/issue-67375.rs:7:12
   |
LL | struct Bug<T> {
   |            ^ unused parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
